# vnm_ros

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  package.xml  setup.py
config/: README.md  model.yaml  robot.yaml  runtime.yaml  topics.yaml  topomap.yaml  train.yaml  training.yaml
launch/: create_dataset.launch  create_topomap.launch  create_topomap_and_dataset.launch  keyboard_cmd_dir.launch  navigate.launch  navigate_visualization.launch  test_model.launch  train.launch  visualize_dataset.launch
rviz/: dataset.rviz
scripts/: create_dataset.py  create_topomap.py  eval.py  keyboard_cmd_dir.py  overlay_view.py  train.py  visualize_dataset.py  vnm_node.py
src/vint_train/: __init__.py
src/vint_train/models/: __init__.py  base_model.py
src/vint_train/models/vint/: __init__.py  self_attention.py  vint.py
src/vnm_ros/: __init__.py
src/vnm_ros/control/: __init__.py  cmd_dir_action_selector.py  safety_filter.py  waypoint_controller.py
src/vnm_ros/datasets/: __init__.py  dataset_utils.py  direction_dataset.py  trajectory_dataset.py  vint_dataset.py
src/vnm_ros/models/: base_model.py  direction_inference.py  direction_model.py  model_loader.py  nomad_inference.py  nomad_model.py  self_attention.py  vint.py  vint_inference.py  vint_model.py  vnm_model.py
src/vnm_ros/ros/: __init__.py  cmd_dir_subscriber.py  cmd_vel_publisher.py  image_subscriber.py  ros_utils.py
src/vnm_ros/topomap/: __init__.py  subgoal_selector.py  topomap.py  topomap_builder.py
src/vnm_ros/training/: __init__.py  checkpoint.py  losses.py  metrics.py  trainer.py
src/vnm_ros/utils/: config.py  image_utils.py  logger.py
topomaps/: README.md
weights/: README.md
