<?xml version="1.0"?>
<package format="2">
  <name>vnm_ros</name>
  <version>0.1.0</version>
  <description>Standalone ROS training and inference package for ViNT.</description>

  <maintainer email="takumi@example.com">takumi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-setuptools</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>scenario_navigation_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>scenario_navigation_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <export/>
</package>
